Update links on list and general_info

--- a/public/general_info.html
+++ b/public/general_info.html
@@ -40,5 +40,13 @@
        <li>Ongoing software licensing costs to support the analytics delivered</li>
     </ul>
   </li>
+<h3>Useful Links</h3>
+<ul>
+  <li><a href="http://opencv.org/"><b>OpenCV</b></a></li>
+  <li><a href="http://simplecv.org/">SimpleCV - computer vision platfomr using Python </a> </li>
+  <li><a href="https://turi.com/learn/gallery/notebooks/image_similarity.html">Turi - Deep Learning and Machine Learning on images </a></li>
+  <li><a href="http://www.bogotobogo.com/python/OpenCV_Python/python_opencv3_basic_image_operations_pixel_access_image_load.php">OpenCV: Tutorial - Basic Image Operations - pixel access </a></li>
+  <li><a href="https://www.microsoft.com/cognitive-services">Microsoft Cognitive Services</a></li>
+</ul>
 </body>
 </html>
