--- a/public/list.html
+++ b/public/list.html
@@ -9,30 +9,32 @@
 <div class = "row">
   <div class="col-md-6">
     <br><br><br><br><br><br>
-	<h3>Introduction</h3>
-	<p>Netarus is working with ODU’s Computer Science department to share data collected from its HoistCam platform.
-	   HoistCam collects aerial footage similar to a drone, but is mounted onto equipment such as a tower crane.</p>
-	<h3>Goals & Requirements</h3>
-	<p>The goal of this competition is to automate analysis and report generation of video for managers of construction sites.
-	   Currently GB of data are generated daily and stored, but a human has to watch the videos for analysis.  The reasons
-	   workers watch these videos (outlined below) need to be incorporated into a video analytics platform.  The Project must
-	   demonstrate the real world and useful data within a construction environment.</p>
-	<h3>Timeline</h3>
-	<ol>
-	  <li><b>Kick-Off Meeting:</b> July 12, 2016 @ 9 AM (Tuesday)</li>
-	  <li><b>Work Period:</b> July 11 through August 5</li>
-	  <li><b>Final Award:</b> August 12, 2016</li>
-	</ol>
-	<h3>Rules & Assumptions/Dependencies</h3>
-	<ul>
-	  <li>20GB of images will be supplied on a storage area network/server to analyze
-	      and produce useful data.</li>
-	  <li>Project must demonstrate the real world and useful data within a
-     	  construction environment.</li>
-	  <li>Can use all resources available to the general public or within the university.</li>
-	  <li>Acceptable computer systems - Open software without licensing restrictions &
-	      Use of ODU computing resources only</li>
-	</ul>
+        <h3>Introduction</h3>
+        <p>Netarus is working with ODU’s Computer Science department to share data collected from its HoistCam platform.
+           HoistCam collects aerial footage similar to a drone, but is mounted onto equipment such as a tower crane.</p>
+        <h3>Goals & Requirements</h3>
+        <p>The goal of this competition is to automate analysis and report generation of video for managers of construction sites.
+           Currently GB of data are generated daily and stored, but a human has to watch the videos for analysis.  The reasons
+           workers watch these videos (outlined below) need to be incorporated into a video analytics platform.  The Project must
+           demonstrate the real world and useful data within a construction environment.</p>
+        <h3>Timeline</h3>
+        <ol>
+          <li><b>Kick-Off Meeting:</b> July 12, 2016 @ 9 AM (Tuesday)</li>
+          <li><b>Work Period:</b> July 11 through August 5</li>
+          <li><b>Final Award:</b> August 12, 2016</li>
+        </ol>
+        <h3>Rules & Assumptions/Dependencies</h3>
+        <ul>
+          <li>20GB of images will be supplied on a storage area network/server to analyze
+              and produce useful data.</li>
+          <li> <a href="https://drive.google.com/folderview?id=0B0FmZgYORYhHejZzQlRwTXZac3M&usp=sharing">IMAGES</a></li>
+          <li>Project must demonstrate the real world and useful data within a
+          construction environment.</li>
+          <li>Can use all resources available to the general public or within the university.</li>
+          <li>Acceptable computer systems - Open software without licensing restrictions &
+              Use of ODU computing resources only</li>
+          <li>All participants must sign the NDA <a href="https://docs.google.com/forms/d/10Cb3tQR6lY1ILVN3NWbru8pMWx12H2a50d1vVXtSAhg/edit?usp=sharing">FORM</a></li>
+        </ul>
 
   </div>
 </div>
@@ -40,22 +42,22 @@
 <h3> Explore the Challenge Topics! </h3>
 <p> You are free to choose any of these three challenge points, the best two will be judged
     and awarded a prize following the procedures described in Judging.</p>
-			<section ng-init="tab = 1">
-		  <ul class="nav nav-pills">
-			<li> <a href ng-click="tab = 1">Object Recognition</a> </li>
-			<li> <a href ng-click="tab = 2">Histogram</a> </li>
-			<li> <a href ng-click="tab = 3">Wild Card</a> </li>
-		  </ul>
-		</section>
-		<div class="panel" ng-show="tab===1">
-		  <img ng-src="{{challenge.contest.image1}}"/>
-		  <p> {{challenge.contest.description1}} </p>
-		</div>
-		<div class="panel" ng-show="tab===2">
-		  <img ng-src="{{challenge.contest.image2}}"/>
-		  <p> {{challenge.contest.description2}} </p>
-		</div>
-		<div class="panel" ng-show="tab===3">
-		  <img ng-src="{{challenge.contest.image3}}"/>
-		  <p> {{challenge.contest.description3}} </p>
-		</div>
+                        <section ng-init="tab = 1">
+                  <ul class="nav nav-pills">
+                        <li> <a href ng-click="tab = 1">Object Recognition</a> </li>
+                        <li> <a href ng-click="tab = 2">Histogram</a> </li>
+                        <li> <a href ng-click="tab = 3">Wild Card</a> </li>
+                  </ul>
+                </section>
+                <div class="panel" ng-show="tab===1">
+                  <img ng-src="{{challenge.contest.image1}}"/>
+                  <p> {{challenge.contest.description1}} </p>
+                </div>
+                <div class="panel" ng-show="tab===2">
+                  <img ng-src="{{challenge.contest.image2}}"/>
+                  <p> {{challenge.contest.description2}} </p>
+                </div>
+                <div class="panel" ng-show="tab===3">
+                  <img ng-src="{{challenge.contest.image3}}"/>
+                  <p> {{challenge.contest.description3}} </p>
+                </div>
