--- a/public/general_info.html
+++ b/public/general_info.html
@@ -48,5 +48,13 @@
   <li><a href="http://www.bogotobogo.com/python/OpenCV_Python/python_opencv3_basic_image_operations_pixel_access_image_load.php">OpenCV: Tutorial - Basic Image Operations - pixel access </a></li>
   <li><a href="https://www.microsoft.com/cognitive-services">Microsoft Cognitive Services</a></li>
 </ul>
+<h3>Computer Vision Research Papers and Documents</h3>
+<ul>
+  <li><embed src="\public\PDF\A performance evaluation of local descriptors.pdf" width="550" height="750"></embed></li>
+  <li></li>
+  <li></li>
+  <li></li>
+  <li></li>
+</ul>
 </body>
 </html>
