PDF change a href

--- a/public/general_info.html
+++ b/public/general_info.html
@@ -50,7 +50,7 @@
 </ul>
 <h3>Computer Vision Research Papers and Documents</h3>
 <ul>
-  <li><embed src="public\PDF\A performance evaluation of local descriptors.pdf" width="50" height="50"></embed></li>
+  <li><a href="public\PDF\A performance evaluation of local descriptors.pdf">A performance evaluation of local descriptors</a></li>
   <li></li>
   <li></li>
   <li></li>
