--- a/public/general_info.html
+++ b/public/general_info.html
@@ -50,7 +50,7 @@
 </ul>
 <h3>Computer Vision Research Papers and Documents</h3>
 <ul>
-  <li><a href="\public\PDF\A performance evaluation of local descriptors.pdf">A performance evaluation of local descriptors</a></li>
+  <li><a href="file://public/PDF/A performance evaluation of local descriptors.pdf">A performance evaluation of local descriptors</a></li>
   <li></li>
   <li></li>
   <li></li>
