href for pdfs again

--- a/public/general_info.html
+++ b/public/general_info.html
@@ -3,6 +3,7 @@
 <head>
 <!--<link rel="stylesheet" type="text/css" href="style_gen_info.css">-->
 </head>
+<!--
 <style>
   body {
     background-image: url("tower-cranes-landscape.jpg");
@@ -12,6 +13,7 @@
     background-color: #99ccff;
   }
 </style>
+-->
 <body>
   <h1>General Information and Challenge Details</h1>
   <h2>Deliverables</h2>
@@ -50,7 +52,7 @@
 </ul>
 <h3>Computer Vision Research Papers and Documents</h3>
 <ul>
-  <li><a href="file://public/PDF/A performance evaluation of local descriptors.pdf">A performance evaluation of local descriptors</a></li>
+  <li><a href="/PDF/A performance evaluation of local descriptors.pdf">A performance evaluation of local descriptors</a></li>
   <li></li>
   <li></li>
   <li></li>
