Added rest of PDFs

--- a/public/general_info.html
+++ b/public/general_info.html
@@ -52,11 +52,14 @@
 </ul>
 <h3>Computer Vision Research Papers and Documents</h3>
 <ul>
-  <li><a href="/PDF/A performance evaluation of local descriptors.pdf">A performance evaluation of local descriptors</a></li>
-  <li></li>
-  <li></li>
-  <li></li>
-  <li></li>
+  <li><a href="/PDF/A performance evaluation of local descriptors.pdf" target="_blank">A performance evaluation of local descriptors</a></li>
+  <li><a href="/PDF/A sparse texture representation using local affine regions.pdf" target="_blank">A sparse texture representation using local affine regions</a></li>
+  <li><a href="/PDF/Histograms of Oriented Gradients for Human Detection.pdf" target="_blank">Histograms of Oriented Gradients for Human Detection</a></li></li>
+  <li><a href="/PDF/ImageNet Classification with Deep Convolutional Neural Networks.pdf" target="_blank">ImageNet Classification with Deep Convolutional Neural Networks</a></li>
+  <li><a href="/PDF/Object Recognition from Local Scale-Invariant Features.pdf" target="_blank">Object Recognition from Local Scale-Invariant Features</a></li>
+  <li><a href="/PDF/Representing and Recognizing the Visual Appearance of Materials.pdf" target="_blank">Representing and Recognizing the Visual Appearance of Materials</a></li>
+  <li><a href="/PDF/Spin-Images_ A Representation for 3D Surface Matching.pdf" target="_blank">Spin-Images_ A Representation for 3D Surface Matching</a></li>
+  <li><a href="/PDF/SURF_ Speeded Up Robust Features.pdf" target="_blank">SURF Speeded Up Robust Features</a></li>  
 </ul>
 </body>
 </html>
