added pdf slides and updated end of challenge date

--- a/public/list.html
+++ b/public/list.html
@@ -20,8 +20,8 @@
         <h3>Timeline</h3>
         <ol>
           <li><b>Kick-Off Meeting:</b> July 12, 2016 @ 9 AM (Tuesday)</li>
-          <li><b>Work Period:</b> July 11 through August 5</li>
-          <li><b>Final Award:</b> August 12, 2016</li>
+          <li><b>Work Period:</b> July 11 through August 2</li>
+          <li><b>Final Award:</b> August 2, 2016</li>
         </ol>
         <h3>Rules & Assumptions/Dependencies</h3>
         <ul>
@@ -34,6 +34,7 @@
           <li>Acceptable computer systems - Open software without licensing restrictions &
               Use of ODU computing resources only</li>
           <li>All participants must sign the NDA <a href="https://docs.google.com/forms/d/10Cb3tQR6lY1ILVN3NWbru8pMWx12H2a50d1vVXtSAhg/edit?usp=sharing">FORM</a></li>
+          <li><a href="/PDF/ODU Analytics Challenge - Kickoff - July 12 2016.pdf" target="_blank">Kick Off Presentation Slides</a>
         </ul>
 
   </div>
