Typo on gen info

--- a/public/general_info.html
+++ b/public/general_info.html
@@ -45,7 +45,7 @@
 <h3>Useful Links</h3>
 <ul>
   <li><a href="http://opencv.org/"><b>OpenCV</b></a></li>
-  <li><a href="http://simplecv.org/">SimpleCV - computer vision platfomr using Python </a> </li>
+  <li><a href="http://simplecv.org/">SimpleCV - computer vision platform using Python </a> </li>
   <li><a href="https://turi.com/learn/gallery/notebooks/image_similarity.html">Turi - Deep Learning and Machine Learning on images </a></li>
   <li><a href="http://www.bogotobogo.com/python/OpenCV_Python/python_opencv3_basic_image_operations_pixel_access_image_load.php">OpenCV: Tutorial - Basic Image Operations - pixel access </a></li>
   <li><a href="https://www.microsoft.com/cognitive-services">Microsoft Cognitive Services</a></li>
@@ -59,7 +59,7 @@
   <li><a href="/PDF/Object Recognition from Local Scale-Invariant Features.pdf" target="_blank">Object Recognition from Local Scale-Invariant Features</a></li>
   <li><a href="/PDF/Representing and Recognizing the Visual Appearance of Materials.pdf" target="_blank">Representing and Recognizing the Visual Appearance of Materials</a></li>
   <li><a href="/PDF/Spin-Images_ A Representation for 3D Surface Matching.pdf" target="_blank">Spin-Images_ A Representation for 3D Surface Matching</a></li>
-  <li><a href="/PDF/SURF_ Speeded Up Robust Features.pdf" target="_blank">SURF Speeded Up Robust Features</a></li>  
+  <li><a href="/PDF/SURF_ Speeded Up Robust Features.pdf" target="_blank">SURF Speeded Up Robust Features</a></li>
 </ul>
 </body>
 </html>
