--- a/public/list.html
+++ b/public/list.html
@@ -3,8 +3,8 @@
 </head>
 
 <div>
-  <img src="odu_logo.gif" alt="Lion Logo" align="left" style="width:152px;height:114px;">
-  <img src="netarus_medium_logo.png" alt="HC Logo" align="right" style="width:300px;height:114px;">
+  <img src="/images/odu_logo.gif" alt="Lion Logo" align="left" style="width:152px;height:114px;">
+  <img src="/images/netarus_medium_logo.png" alt="HC Logo" align="right" style="width:300px;height:114px;">
 </div>
 <div class = "row">
   <div class="col-md-6">
