changed path of back button

--- a/public/progress.html
+++ b/public/progress.html
@@ -23,7 +23,7 @@
 	<p ng-if="progressReport.challenge"> Current Challenge Focus: {{ progressReport.challenge }} </p>
     <p>
       <!--<button style="margin-top:20px" class="btn btn-default" ng-click="toggleEdit()">Edit</button>-->
-      <a style="margin-top:20px" class="btn btn-default" href="#/">Back</a>
+      <a style="margin-top:20px" class="btn btn-default" href="/progress_front_page">Back</a>
     </p>
   </div>
 </div>
