--- a/public/general_info.html
+++ b/public/general_info.html
@@ -36,7 +36,7 @@
    </li>
    <li>Usefulness - how valuable and useful is the resulting analysis from the data supplied</li>
    <li>Efficiency - Speed at which the resulting analysis can be rendered in a demonstrable format.</li>
-   <li>Costs
+   <li>Costs:
      <ul>
        <li>On-going hardware infrastructure costs to support the analytics delivered</li>
        <li>Ongoing software licensing costs to support the analytics delivered</li>
