--- a/public/general_info.html
+++ b/public/general_info.html
@@ -50,7 +50,7 @@
   <li><a href="http://www.bogotobogo.com/python/OpenCV_Python/python_opencv3_basic_image_operations_pixel_access_image_load.php">OpenCV: Tutorial - Basic Image Operations - pixel access </a></li>
   <li><a href="https://www.microsoft.com/cognitive-services">Microsoft Cognitive Services</a></li>
 </ul>
-<h3>Computer Vision Research Papers and Documents</h3>
+<h3><b>Computer Vision Research Papers and Documents</b></h3>
 <ul>
   <li><a href="/PDF/A performance evaluation of local descriptors.pdf" target="_blank">A performance evaluation of local descriptors</a></li>
   <li><a href="/PDF/A sparse texture representation using local affine regions.pdf" target="_blank">A sparse texture representation using local affine regions</a></li>
