--- a/public/general_info.html
+++ b/public/general_info.html
@@ -50,6 +50,7 @@
   <li><a href="http://www.bogotobogo.com/python/OpenCV_Python/python_opencv3_basic_image_operations_pixel_access_image_load.php">OpenCV: Tutorial - Basic Image Operations - pixel access </a></li>
   <li><a href="https://www.microsoft.com/cognitive-services">Microsoft Cognitive Services</a></li>
 </ul>
+<!--test win -->
 <h3><b>Computer Vision Research Papers and Documents</b></h3>
 <ul>
   <li><a href="/PDF/A performance evaluation of local descriptors.pdf" target="_blank">A performance evaluation of local descriptors</a></li>
